# polypoorest

./: CMakeLists.txt  README.md
cs5721Lib/SceneFiles_TestA/: BlinnPhong_Phong_Comparison.xml  CornellBox.xml  bhart_01_2012.xml  blinnPhongMirroredTest.xml  bneumann_00_2011.xml  glazeTest.xml  glazeTest2.xml  khalverson_00_2012.xml  multipleTriangles.xml  oneSphere_Specular.xml  spheres_1K_Mirrored.xml  threeSpheres.xml
cs5721Lib/SceneFiles_TestB/: ALittleOfEverything.xml  Al.xml  EnvironmentMappedScene.xml  TexturedScene.xml  TexturedScene_Noise.xml  areaLight.xml  boxMarble.xml  boxNoise.xml  boxTexture.xml  boxWood.xml  dielectricBox.xml  dielectricBuddha.xml  dielectricEgg.xml  dielectricObjects.xml  dielectricSphere.xml  dielectric_dragon.xml  dragon_100K.xml  earth.xml  happyBuddha_CoolToWarm.xml  lotsOfGlass.xml  rotatedBox.xml  rowOfBunnys.xml  singleEgg.xml  sphereMarble.xml  sphereNoise.xml  sphereTexture.xml  sphereWood.xml  stanfordBunny_69K.xml
cs5721Lib/SceneFiles_TestC/: CornellBox.xml  CornellBox_Dielectric.xml  CornellBox_Specular.xml  MarsDTETest.xml
cs5721Lib/cs5721GraphicsLib/OpenGL/: CMakeLists.txt  OpenGLRender.cpp  OpenGLRender.h  fboExample.cpp  fragmentShader_simple.glsl  renderToTexture.cpp  simpleGLSLExample.cpp  vertexShader_simple.glsl
graphics-lib/: AreaLight.cpp  AreaLight.h  BBoxFactory.h  BVHNode.cpp  BVHNode.h  Basis.cpp  Basis.h  BlinnPhongShader.cpp  BlinnPhongShader.h  BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  CMakeLists.txt  Camera.h  DielectricShader.cpp  DielectricShader.h  ImplicitSphere.cpp  ImplicitSphere.h  InstancedObject.cpp  InstancedObject.h  LambertianShader.cpp  LambertianShader.h  Light.h  Mathf.cpp  Mathf.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PointLight.h  Ray.h  RaycastHit.h  RenderWindow.cpp  RenderWindow.h  Scene.cpp  Scene.h  SceneElement.cpp  SceneElement.h  Shader.cpp  (+6 more)
lab12/: CMakeLists.txt  renderToTexture.cpp
lab8/: CMakeLists.txt  VBO.cpp  VBO.h  lab-8.cpp
scenes/: glossinessTest.xml  mirror.xml  oneBox.xml  threeBox.xml
src/: CMakeLists.txt  CameraCreator.cpp  CameraCreator.h  LightCreator.cpp  LightCreator.h  RasterizerArgs.cpp  RasterizerArgs.h  RenderWorkerThread.h  ShaderCreator.cpp  ShaderCreator.h  ShapeCreator.cpp  ShapeCreator.h  ThreadData.h  ray-tracer.cpp  thread_test.cpp
utests/: CMakeLists.txt  utestBasis.cpp  utestCamera.cpp  utestFailure.cpp  utestMatrix4x4.cpp  utestSuccess.cpp
